# MoodTracker

./: .gitignore  CMakeLists.txt  HomePage.qml  Main.qml  NewEntry.qml  README.md  resources.qrc
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
include/: DatabaseManager.hpp  DateFormatter.hpp  Notification.hpp
qml/: BlurredBackground.qml  HomePage.qml  Main.qml  NewEntry.qml
src/: DatabaseManager.cpp  DateFormatter.cpp  Notification.cpp  main.cpp
